hphp/hack/test/typecheck/reactive/print_in_rx9.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx>>
function f()[rx]: void {
  $a = <<__NonRx>>()[defaults] ==> {
    print 1;
  };
  // ERROR
  $a();
}
